Reworked project structure